# openroute

./: .env.example  .gitignore  .trigger2  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: quickstart.py
src/: cache.py  config.py  core.py  cost.py  providers.py  router.py
tests/: test_openroute.py
