[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openroute"
version = "0.1.0"
description = "Roteador inteligente de LLMs — cache semântico, fallback, roteamento por tipo de query"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Rodolfo Barbosa", email = "rodolfo@dtsqd.com" },
]
dependencies = [
  "openai>=1.0",
  "anthropic>=0.30",
  "numpy>=1.24",
]

[project.urls]
Repository = "https://github.com/generalrodolfao/openroute"
